--- a/src/index.css
+++ b/src/index.css
@@ -350,3 +350,25 @@
   width: max-content;
   background-color: #ffc01e40;
 }
+
+.pentagon {
+  position: relative;
+}
+
+/* .pentagon::before {
+  content: '';
+  position: absolute;
+  top: -25px;
+  border-left: 45px solid transparent;
+  border-right: 45px solid transparent;
+  border-bottom: 25px solid #7c7d7d;
+} */
+
+.pentagon::after {
+  content: '';
+  position: absolute;
+  bottom: -1.5em;
+  border-left: 2.5em solid transparent;
+  border-right: 2.5em solid transparent;
+  border-top: 1.6em solid #7c7d7d;
+}
